# gh-copilot-metrics

./: README.md  pyproject.toml
data/: copilot_data_example.json  test_data.json
pilot_metrics/: bigquery_uploader.py  main.py  models.py  processing.py  visualizer.py
tests/: test_bigquery_uploader.py  test_main.py  test_models.py  test_processing.py  test_visualizer.py
