[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot-metrics"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pydantic==2.*",
    "typer[all]",
    "google-cloud-bigquery",
    "pandas",
    "plotly",
]

[project.scripts]
pilot-metrics = "pilot_metrics.main:app"

[tool.uv]
package = true


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PYI"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
exclude = ["tests/"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ty>=0.0.1a13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
